GameModel test + Mockito usage for learning purposes